

NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).

    o	Making refman.pdf works around a problem with the indexing
	with hyperref 6.79d and later.


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES

    o	trigamma(x) and other psigamma(x, n) calls are now accurate for
	very large abs(x). (PR#14020)

    o	[g]sub(perl=FALSE, fixed=FALSE) could use excessive stack space
	when used with a very long vector containing some non-ASCII
	strings.

    o	The default method of weighted.mean(na.rm = TRUE) did not omit
	weights for NA observations in 2.10.0.	(PR#14032)

    o	[g]regexpr(pattern, fixed = TRUE) returned match positions in
	bytes (not characters) in an MBCS locale if 'pattern' was a
	single byte.

	[g]sub(fixed = TRUE) with a single-byte pattern could
	conceivably have matched part of a multibyte character in a
	non-UTF-8 MBCS.

    o	findLineNum() and setBreakpoint() would sometimes fail if the
	specified file was not in the current directory.

    o	Package tcltk's demo(tkdensity) was broken in 2.9.0 when demo()
	was changed to set par(ask = TRUE).

    o	gsub() with backrefs could fail on extremely long strings
	(hundreds of thousands of characters) due to integer overflow
	in a length calculation.

    o	abline(*, untf=TRUE) now uses a better x-grid in log-scale, e.g.,